# --------------------------------------------------------------
# Required CMake version
# --------------------------------------------------------------
cmake_minimum_required(VERSION 3.10)

# --------------------------------------------------------------
# Target directories
# --------------------------------------------------------------
add_subdirectory(client)
add_subdirectory(server)
add_subdirectory(weather_service)
add_subdirectory(sample)
