# --------------------------------------------------------------
# Required CMake version
# --------------------------------------------------------------
cmake_minimum_required(VERSION 3.10)

# --------------------------------------------------------------
# Target directories
# --------------------------------------------------------------
add_subdirectory(sample)
add_subdirectory(hello_world)
