# --------------------------------------------------------------
# Required CMake version
# --------------------------------------------------------------
cmake_minimum_required(VERSION 3.10)

# --------------------------------------------------------------
# Target name
# --------------------------------------------------------------
set(TARGET_NAME client)

# --------------------------------------------------------------
# Executables
# --------------------------------------------------------------
add_executable(${TARGET_NAME}
    client.cpp)
