# --------------------------------------------------------------
# Required CMake version
# --------------------------------------------------------------
cmake_minimum_required(VERSION 3.10)

# --------------------------------------------------------------
# Target name
# --------------------------------------------------------------
set(TARGET_NAME test_udp_server)

# --------------------------------------------------------------
# Executables
# --------------------------------------------------------------
add_executable(
  ${TARGET_NAME}
  test_udp_server.cpp
)

# --------------------------------------------------------------
# Target link libraries
# --------------------------------------------------------------
target_link_libraries(
  ${TARGET_NAME}
  GTest::gtest_main
)

# --------------------------------------------------------------
# GoogleTest
# --------------------------------------------------------------
include(GoogleTest)
gtest_discover_tests(${TARGET_NAME})
